--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,14 +54,14 @@ html {
 }
 
 .fast-buy .collapsible:after {
-    content: '\002B';
+    content: '\2212';
     font-weight: bold;
     float: left;
     margin-right: 5px;
 }
 
 .fast-buy .collapsible.active:after {
-    content: "\2212";
+    content: "\002B";
 }
 
 
@@ -75,9 +75,17 @@ html {
 }
 
 .fast-buy .card-body {
-    max-height: 0;
     overflow: hidden;
-    transition: max-height 0.3s ease-out;
+    transition: 0.5s;
+}
+
+span.not-available {
+    float: left;
+    background: #d90000;
+    color: white;
+    font-weight: 100;
+    padding: 2px 10px;
+    border-radius: 5px;
 }
 
 
